<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
			xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.github.mtrevisan.mapmatcher</groupId>
	<artifactId>MapMatcher</artifactId>
	<version>1.0-SNAPSHOT</version>

	<packaging>jar</packaging>

	<name>MapMatcher</name>
	<description>Library for map matching</description>
	<url>https://github.com/mtrevisan/MapMatcher</url>

	<developers>
		<developer>
			<name>Mauro Trevisan</name>
			<email>851903+mtrevisan@users.noreply.github.com</email>
			<url>https://github.com/mtrevisan/</url>
			<roles>
				<role>Developer</role>
			</roles>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git@github.com:mtrevisan/MapMatcher.git</connection>
		<developerConnection>scm:git:git@github.com:mtrevisan/MapMatcher.git</developerConnection>
		<url>https://github.com/mtrevisan/MapMatcher</url>
	</scm>

	<issueManagement>
		<url>https://github.com/mtrevisan/mapmatcher/issues</url>
		<system>GitHub Issues</system>
	</issueManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<java.version>1.17</java.version>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>

		<javadoc.html.version>-html5</javadoc.html.version>

		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
		<maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-shade-plugin -->
		<maven-shade-plugin.version>3.4.0</maven-shade-plugin.version>

		<!-- Logging -->
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
		<slf4j.slf4j-api.version>2.0.3</slf4j.slf4j-api.version>
		<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
		<logback.logback-classic.version>1.4.4</logback.logback-classic.version>

		<!-- JUnit -->
		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
		<junit.junit-jupiter-engine.version>5.9.1</junit.junit-jupiter-engine.version>
	</properties>

	<build>
		<plugins>
			<!-- Compiler -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
					<showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>
			<!-- Shade -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>${maven-shade-plugin.version}</version>
				<executions>
					<execution>
						<!-- Run shade goal on package phase -->
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<minimizeJar>true</minimizeJar>
							<shadedArtifactAttached>true</shadedArtifactAttached>
							<shadedClassifierName>shaded</shadedClassifierName>
							<filters>
								<!-- FIXME: strengthen the inclusions -->
								<!-- ClassNotFoundException: ch.qos.logback.classic.boolex.OnMarkerEvaluator-->
								<filter>
									<artifact>ch.qos.logback:logback-classic</artifact>
									<includes>
										<include>**</include>
									</includes>
								</filter>
							</filters>
							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<manifestEntries>
										<X-Compile-Source-JDK>${maven.compiler.source}</X-Compile-Source-JDK>
										<X-Compile-Target-JDK>${maven.compiler.target}</X-Compile-Target-JDK>
										<Built-By>Mauro Trevisan</Built-By>
										<Build-Jdk>${java.version} (${java.vendor} ${java.vm.version})</Build-Jdk>
										<Build-OS>${os.name} ${os.arch} ${os.version}</Build-OS>
									</manifestEntries>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>


	<dependencies>
		<!-- Logger -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.slf4j-api.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.logback-classic.version}</version>
<!--			<scope>test</scope>-->
<!--			<optional>true</optional>-->
		</dependency>

		<!-- JUnit -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.junit-jupiter-engine.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
</project>